--- a/app/src/main/res/layout/adapter_restaurant.xml
+++ b/app/src/main/res/layout/adapter_restaurant.xml
@@ -3,6 +3,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="restaurants"
+            type="com.restaurants.model.Restaurants" />
+
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -25,7 +33,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="5dp"
-            android:text="Mission Chinese Food"
+            android:text="@{restaurants.name}"
             android:textColor="@android:color/black"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -41,7 +49,7 @@
             android:gravity="center"
             android:paddingStart="5dp"
             android:paddingEnd="5dp"
-            android:text="Asian, Chinese"
+            android:text="@{restaurants.cuisine_type}"
             android:textColor="@android:color/black"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +64,7 @@
             android:gravity="center"
             android:paddingStart="5dp"
             android:paddingEnd="5dp"
-            android:text="171 E Broadway, New York, NY 10002"
+            android:text="@{restaurants.address}"
             android:textColor="@android:color/black"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +78,7 @@
             android:layout_height="wrap_content"
             android:rating="4"
             android:numStars="5"
-            android:isIndicator="false"
+            android:isIndicator="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvRestaurantAddress"
